Fixing Photo Stretch on Members
the photos were distorted due to bad height/width requirements

--- a/style/members.css
+++ b/style/members.css
@@ -31,6 +31,7 @@ h1{
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
+    padding-left: 10px;
 	overflow: hidden;
 	float: right;
 }
@@ -38,8 +39,7 @@ h1{
     text-align:center;
 }
 .member {
-    width:160px;
-    height:200px;
+    width:155px;
     margin-top:20px;
     margin-bottom:10px;
     margin-right:0px;
